working library (some css)

--- a/src/css/app.characters.list.css
+++ b/src/css/app.characters.list.css
@@ -1,7 +1,17 @@
 .app-characters-list_style {
+    text-indent: 10px;
     width: 200px;
     height: 250px;
+    box-sizing: border-box;
     position: relative;
     float: left;
     margin: 15px;
+    border: 2px solid #495460;
+    background-color: aliceblue;
+}
+.bad-data_style {
+    padding: 20px 10px;
+    text-indent: 0;
+    text-align: justify;
+    color: indianred;
 }
