--- a/src/css/main.ul.css
+++ b/src/css/main.ul.css
@@ -37,5 +37,8 @@ body {
         background: silver;
         background: linear-gradient(to bottom, silver, #dfdfdf);
         position: absolute;
-        opacity: 0.5;
+        opacity: 0.9;
+        font-weight: bold;
+        color: #fff;
+        text-shadow: 0 1px #000;
     }
